# peppermint_task1

./: README.md
Thresholding/: green_color_thresholding.ipynb
peppermint_task1/: package.xml  setup.cfg  setup.py
peppermint_task1/launch/: task.launch.py
peppermint_task1/models/: sphere.sdf
peppermint_task1/peppermint_task1/: controller_node.py  vision_node.py
peppermint_task1_cpp/: CMakeLists.txt  package.xml
peppermint_task1_cpp/launch/: task_launch.py
peppermint_task1_cpp/models/: sphere.sdf
peppermint_task1_cpp/src/: controller_node.cpp  vision_node.cpp
