cmake_minimum_required(VERSION 3.8)
project(peppermint_task1_cpp)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(image_transport REQUIRED)
find_package(OpenCV REQUIRED)

add_executable(vision_node src/vision_node.cpp)
target_include_directories(vision_node PRIVATE ${OpenCV_INCLUDE_DIRS})
ament_target_dependencies(vision_node rclcpp sensor_msgs std_msgs cv_bridge image_transport)
target_link_libraries(vision_node ${OpenCV_LIBS})

add_executable(controller_node src/controller_node.cpp)
ament_target_dependencies(controller_node rclcpp sensor_msgs geometry_msgs std_msgs)


install(TARGETS
  vision_node
  controller_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY
  launch
  models
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
